Agent army optimizations batch 2: SEO & UX improvements
- Fix all 24 title tags with unique, SEO-optimized titles
- Add About link to navigation on all 24 pages
- Fix contact form: Change message input to proper textarea element
- Add FAQ Schema markup to pricing page (8 questions for rich snippets)
- Add unique meta descriptions to all 24 pages (150-160 chars, optimized for CTR)

SEO Impact:
- FAQ rich snippets will appear in Google search results
- Unique titles prevent duplicate content confusion
- Compelling meta descriptions increase click-through rates
- About page now accessible from navigation

UX Impact:
- Contact form message field now supports multi-line input
- Better navigation structure with About link
- Improved accessibility with proper form elements

--- a/public/about.html
+++ b/public/about.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f91" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>About – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>About Us - SEOLOGY.AI | The Team Behind Automated SEO</title>
+  <meta content="Meet the team behind SEOLOGY.AI. We built the first SEO platform that automatically fixes technical issues instead of just reporting them. Learn our story." name="description">
   <meta content="About – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="Meet the team behind SEOLOGY.AI. We built the first SEO platform that automatically fixes technical issues instead of just reporting them. Learn our story." property="og:description">
   <meta content="About – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="Meet the team behind SEOLOGY.AI. We built the first SEO platform that automatically fixes technical issues instead of just reporting them. Learn our story." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,6 +53,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
