--- a/public/contact.html
+++ b/public/contact.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f8f" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Contact – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>Contact Us - SEOLOGY.AI | Sales, Support & Partnerships</title>
+  <meta content="Get in touch with SEOLOGY.AI. Sales inquiries < 2hrs response, technical support < 4hrs. Live chat 9am-6pm EST. Join 5,000+ users in our Discord community." name="description">
   <meta content="Contact – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="Get in touch with SEOLOGY.AI. Sales inquiries < 2hrs response, technical support < 4hrs. Live chat 9am-6pm EST. Join 5,000+ users in our Discord community." property="og:description">
   <meta content="Contact – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="Get in touch with SEOLOGY.AI. Sales inquiries < 2hrs response, technical support < 4hrs. Live chat 9am-6pm EST. Join 5,000+ users in our Discord community." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,6 +53,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
@@ -222,7 +230,7 @@
                     <form id="wf-form-Contact-Form" name="wf-form-Contact-Form" data-name="Contact Form" method="get" class="contact-form" data-wf-page-id="690377308ebfd7be919f1f8f" data-wf-element-id="000a6e7f-091f-55f1-b166-da3ed953395c"><label for="name" class="form-label">Name</label><input class="form-input w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name">
                       <div class="spacer-small"></div><label for="email" class="form-label">Email Address</label><input class="form-input w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required="">
                       <div class="spacer-small"></div><label for="Subject" class="form-label">Subject</label><input class="form-input w-input" maxlength="256" name="Subject" data-name="Subject" placeholder="" type="text" id="Subject" required="">
-                      <div class="spacer-small"></div><label for="Message" class="form-label">Message</label><input class="form-input is-text-area w-input" maxlength="256" name="Message" data-name="Message" placeholder="" type="text" id="Message" required="">
+                      <div class="spacer-small"></div><label for="Message" class="form-label">Message</label><textarea class="form-input is-text-area w-input" maxlength="5000" name="Message" data-name="Message" placeholder="Tell us how we can help..." id="Message" required=""></textarea>
                       <div class="spacer-large"></div><input type="submit" data-wait="Please wait..." class="button w-button" value="Send Message">
                     </form>
                     <div class="form-message-success w-form-done">
