--- a/public/404.html
+++ b/public/404.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f95" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Not Found – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>Page Not Found (404) - SEOLOGY.AI | Return to Homepage</title>
+  <meta content="Page Not Found (404) - This page doesn't exist on SEOLOGY.AI. Return to the homepage or contact support if you think this is an error." name="description">
   <meta content="Not Found – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="Page Not Found (404) - This page doesn't exist on SEOLOGY.AI. Return to the homepage or contact support if you think this is an error." property="og:description">
   <meta content="Not Found – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="Page Not Found (404) - This page doesn't exist on SEOLOGY.AI. Return to the homepage or contact support if you think this is an error." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,10 +53,18 @@
                       <div class="nav-text">Enterprise</div>
                       <div class="nav-text is-hover">Enterprise</div>
                     </div>
-                  </a>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
+                      </div>
+                    </a>
+                  </div>
                 </div>
-              </div>
-              <div class="right-nav-menu">
+                <div class="right-nav-menu">
                 <div class="nav-link-overflow">
                   <a href="careers.html" class="nav-link w-inline-block">
                     <div class="nav-link-block">
