--- a/public/ecommerce.html
+++ b/public/ecommerce.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f91" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>E-commerce SEO – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>E-commerce SEO - SEOLOGY.AI | Automated Shopify & WooCommerce Optimization</title>
+  <meta content="E-commerce SEO automation for Shopify, WooCommerce, and custom stores. Fix missing product meta tags, broken links, and technical issues automatically." name="description">
   <meta content="About – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="E-commerce SEO automation for Shopify, WooCommerce, and custom stores. Fix missing product meta tags, broken links, and technical issues automatically." property="og:description">
   <meta content="About – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="E-commerce SEO automation for Shopify, WooCommerce, and custom stores. Fix missing product meta tags, broken links, and technical issues automatically." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,6 +53,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
