--- a/public/enterprise-guides.html
+++ b/public/enterprise-guides.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f91" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Enterprise Guides – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>Enterprise Guides - SEOLOGY.AI | Advanced SEO Automation</title>
+  <meta content="Enterprise SEO automation guides. Best practices for scaling SEO across 1,000+ sites, team management, custom workflows, and white-label reporting." name="description">
   <meta content="About – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="Enterprise SEO automation guides. Best practices for scaling SEO across 1,000+ sites, team management, custom workflows, and white-label reporting." property="og:description">
   <meta content="About – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="Enterprise SEO automation guides. Best practices for scaling SEO across 1,000+ sites, team management, custom workflows, and white-label reporting." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,6 +53,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
