--- a/public/enterprise.html
+++ b/public/enterprise.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f91" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Enterprise – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>Enterprise - SEOLOGY.AI | SEO Automation at Scale</title>
+  <meta content="SEOLOGY.AI Enterprise: Automate SEO for 1,000+ sites without hiring more people. White-label reporting, dedicated support, and custom integrations included." name="description">
   <meta content="About – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="SEOLOGY.AI Enterprise: Automate SEO for 1,000+ sites without hiring more people. White-label reporting, dedicated support, and custom integrations included." property="og:description">
   <meta content="About – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="SEOLOGY.AI Enterprise: Automate SEO for 1,000+ sites without hiring more people. White-label reporting, dedicated support, and custom integrations included." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -114,6 +114,14 @@ html { scroll-behavior: smooth; }
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
