--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f8c" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues</title>
-  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." name="description">
+  <title>SEOLOGY.AI - AI-Powered SEO Automation That Actually Fixes Issues</title>
+  <meta content="SEOLOGY.AI automatically fixes SEO issues on your site—no manual work needed. Connect your CMS and watch broken links, meta tags, and technical errors disappear." name="description">
   <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="og:title">
-  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="og:description">
+  <meta content="SEOLOGY.AI automatically fixes SEO issues on your site—no manual work needed. Connect your CMS and watch broken links, meta tags, and technical errors disappear." property="og:description">
   <meta content="SEOLOGY.AI – AI-Powered SEO That Actually Fixes Issues" property="twitter:title">
-  <meta content="The first SEO platform powered by our AI that doesn't just report problems—it automatically fixes them. Connect your Shopify, WordPress, or any CMS and watch SEO issues disappear." property="twitter:description">
+  <meta content="SEOLOGY.AI automatically fixes SEO issues on your site—no manual work needed. Connect your CMS and watch broken links, meta tags, and technical errors disappear." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -54,6 +54,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
