--- a/public/pricing.html
+++ b/public/pricing.html
@@ -2,12 +2,12 @@
 <html data-wf-page="690377308ebfd7be919f1f93" data-wf-site="6903772e8ebfd7be919f1f14" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Projects – SEOLOGY.AI</title>
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." name="description">
+  <title>Pricing & Plans - SEOLOGY.AI | SEO Automation Platform</title>
+  <meta content="Compare SEOLOGY.AI pricing plans. Start free with 3 sites & 100 fixes/month, or go unlimited with Pro at $20/mo. Enterprise plans with white-label reporting available." name="description">
   <meta content="Projects – SEOLOGY.AI" property="og:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="og:description">
+  <meta content="Compare SEOLOGY.AI pricing plans. Start free with 3 sites & 100 fixes/month, or go unlimited with Pro at $20/mo. Enterprise plans with white-label reporting available." property="og:description">
   <meta content="Projects – SEOLOGY.AI" property="twitter:title">
-  <meta content="SEOLOGY.AI is a premium AI-powered SEO automation platform that detects and fixes technical SEO issues automatically, helping your site rank higher without manual work." property="twitter:description">
+  <meta content="Compare SEOLOGY.AI pricing plans. Start free with 3 sites & 100 fixes/month, or go unlimited with Pro at $20/mo. Enterprise plans with white-label reporting available." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -21,6 +21,80 @@
   <link rel="canonical" href="https://seology.ai/pricing.html">
   <meta property="og:image" content="https://seology.ai/images/og-image.jpg">
   <meta property="twitter:image" content="https://seology.ai/images/og-image.jpg">
+
+  <!-- FAQ Schema Markup for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What counts as a \"fix\"?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A fix is any automated SEO correction SEOLOGY.AI deploys to your site. This includes meta tag updates, broken link fixes, schema markup additions, image alt text, canonical tags, and technical optimizations. Scanning and analysis don't count toward your quota—only actual fixes deployed."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I change plans anytime?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes! Upgrade or downgrade anytime. Upgrades take effect immediately with prorated billing. Downgrades take effect at the end of your current billing period. Your data and site connections are preserved when changing plans."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What payment methods do you accept?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We accept all major credit cards (Visa, Mastercard, Amex, Discover) via Stripe. Enterprise customers can pay via invoice, ACH transfer, or wire transfer with annual contracts. All prices in USD. International payments supported."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is there a contract or commitment?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No long-term contracts required for Starter and Pro plans. Cancel anytime—you'll have access until the end of your billing period. Enterprise plans require annual contracts but include volume discounts up to 40%. All plans include 14-day money-back guarantee."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What happens if I exceed my fix limit?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "On the Starter plan, you'll receive a notification when approaching your 100 fix/month limit. Fixes will pause at 100 until next month or you can upgrade to Pro for unlimited fixes. Pro and Enterprise plans have no limits—deploy as many fixes as needed."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you offer discounts for nonprofits or education?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes! Registered 501(c)(3) nonprofits and educational institutions (.edu emails) qualify for 50% off Pro plans. Contact sales@seology.ai with proof of nonprofit status or .edu email for a discount code. Offer applies to annual plans only."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I get a refund if I'm not satisfied?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. We offer a 14-day money-back guarantee on all paid plans. If you're not satisfied for any reason within 14 days of your first payment, contact support for a full refund—no questions asked. Refunds processed within 3-5 business days."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What's included in Enterprise support?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Enterprise customers get dedicated Slack channel, priority email/phone support (responds in <1 hour), quarterly business reviews, custom onboarding, technical account manager, SLA guarantees (99.9% uptime), and influence on product roadmap. White-label reporting and team training included."
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
   <a href="#main-content" class="skip-link" style="position:absolute;left:-10000px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to main content</a>
@@ -53,6 +127,14 @@
                       <div class="nav-link-block">
                         <div class="nav-text">Enterprise</div>
                         <div class="nav-text is-hover">Enterprise</div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="nav-link-overflow">
+                    <a href="about.html" class="nav-link w-inline-block">
+                      <div class="nav-link-block">
+                        <div class="nav-text">About</div>
+                        <div class="nav-text is-hover">About</div>
                       </div>
                     </a>
                   </div>
