Agent army optimizations batch 3: Conversion & trust signals
- Fix pricing page H1 tag (was h2, now h1 for proper SEO)
- Improve homepage headline: '#1 AI SEO' → 'The First SEO Platform That Actually Fixes Issues'
- Add trust signals to pricing page: No credit card, 14-day guarantee, cancel anytime
- Fix awkward CTA copy: 'Let's Create Your SEO?' → 'Ready to Automate Your SEO?'

Conversion Impact:
- Stronger value proposition emphasizes unique differentiator (auto-fix vs report)
- Trust signals reduce friction and increase trial signups
- Clear headline immediately communicates what SEOLOGY.AI does differently
- Proper H1 tag improves SEO and page structure

From agent army recommendations:
- Copywriting Agent: Homepage headline too generic, needed differentiation
- Conversion Agent: Missing trust signals killing conversions
- SEO Agent: Pricing page missing H1 tag
- UX Agent: Awkward grammar in CTA copy

--- a/public/index.html
+++ b/public/index.html
@@ -119,8 +119,8 @@
           <div id="w-node-_9c570c00-ab78-67c2-9dc1-846a4232fb9e-919f1f8c" class="padding-global">
             <div class="container-large">
               <div class="w-layout-grid header-content-grid">
-                <h1 id="w-node-_426a35b7-c2a6-75c7-570c-8d9fb509dc05-919f1f8c" class="header-title">#1 AI SEO</h1>
-                <h1 id="w-node-c948342a-79be-0794-4d59-dea04773fd7e-919f1f8c" class="header-title">Automation Platform</h1>
+                <h1 id="w-node-_426a35b7-c2a6-75c7-570c-8d9fb509dc05-919f1f8c" class="header-title">The First SEO Platform</h1>
+                <h1 id="w-node-c948342a-79be-0794-4d59-dea04773fd7e-919f1f8c" class="header-title">That <span class="text-color-secondary">Actually Fixes</span> Issues</h1>
               </div>
               <div class="spacer-medium"></div>
               <div style="text-align: center;">
