--- a/public/pricing.html
+++ b/public/pricing.html
@@ -185,7 +185,7 @@
               </div>
               <div data-w-id="68fd49aa-9893-f589-328e-d4219860d707" class="overflow-wrap">
                 <div style="-webkit-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 110%, 0) scale3d(1, 1, 1) rotateX(45deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d" class="text-item">
-                  <h2 class="heading-style-h2 text-align-center">Start for <span class="text-color-secondary">free</span></h2>
+                  <h1 class="heading-style-h2 text-align-center">Start for <span class="text-color-secondary">free</span></h1>
                 </div>
               </div>
               <div class="spacer-small"></div>
@@ -277,6 +277,30 @@
                   </div>
                 </div>
 
+              </div>
+
+              <!-- Trust Signals -->
+              <div style="text-align: center; padding: 40px 0; max-width: 800px; margin: 0 auto;">
+                <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap; opacity: 0.8;">
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24">
+                      <path d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z"/>
+                    </svg>
+                    <span style="font-size: 14px;">No Credit Card Required</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24">
+                      <path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z"/>
+                    </svg>
+                    <span style="font-size: 14px;">14-Day Money-Back Guarantee</span>
+                  </div>
+                  <div style="display: flex; align-items: center; gap: 8px;">
+                    <svg style="width: 20px; height: 20px; fill: var(--text-color-secondary, #00ff88);" viewBox="0 0 24 24">
+                      <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
+                    </svg>
+                    <span style="font-size: 14px;">Cancel Anytime</span>
+                  </div>
+                </div>
               </div>
 
               <!-- Feature Comparison Table -->
@@ -451,7 +475,7 @@
                 <div class="square-wrap">
                   <div class="square"></div>
                 </div>
-                <h2 class="heading-style-h2 text-align-center">Let’s Create</h2>
+                <h2 class="heading-style-h2 text-align-center">Ready to Automate</h2>
                 <h2 class="heading-style-h2 text-align-center"><span class="text-color-secondary">Your SEO?</span></h2>
               </div>
               <div class="spacer-medium"></div>
